@@ -114,6 +114,9 @@ on paper.  (Worst case you can type it back in, or use OCR.)  Export with:
 
   $ gpg --export-secret-keys --armor
 
+You can encrypt to multiple keys by providing multiple C<gpg_recipient> 
+lines; any of the keys provided will be able to decrypt the backups.
+
 =head1 Restores
 
 To do a restore, you'll need your *.brackup file handy.  If you lost
